@@ -109,5 +109,6 @@ alter table acls drop column description;
 alter table objtypes alter column config set default '<meta />';
 alter table change_trigger_types drop column description ;
 alter table customtables rename column jdbcdriver to jdbc_driver;
-alter table permissions drop description;
-alter table formats drop description;
+alter table permissions drop column description;
+alter table formats drop column description;
+alter table groups drop column description;
